@@ -13,7 +13,7 @@ config:
 	  window:
 	  {
 		title = "simple ai demo";
-		size = { w = 1280; h = 720 };
+		size = { w = 800; h = 600 };
 
 		background = { r = 100; g = 200; b = 100; a = 255 };
 	  };
@@ -29,31 +29,31 @@ config:
 	  textures = (
 		{
 			name = "player";
-			file = "../assets/astronaut_front.png";
+			file = "../../../assets/astronaut_front.png";
 			num_frames_x = 1;
 			num_frames_y = 1;
 		},
 		{
 			name = "enemie";
-			file = "../assets/enemie_simple.png";
+			file = "../../../assets/enemie_simple.png";
 			num_frames_x = 1;
 			num_frames_y = 1;
 		},
 		{
 			name = "tree";
-			file = "../assets/tree_simple.png";
+			file = "../../../assets/tree_simple.png";
 			num_frames_x = 1;
 			num_frames_y = 1;
 		},
 		{
 			name = "heal";
-			file = "../assets/flask_heal_small.png";
+			file = "../../../assets/flask_heal_small.png";
 			num_frames_x = 1;
 			num_frames_y = 1;
 		},
 		{
 			name = "shield";
-			file = "../assets/flask_mana_small.png";
+			file = "../../../assets/flask_mana_small.png";
 			num_frames_x = 1;
 			num_frames_y = 1;
 		}
@@ -102,8 +102,8 @@ config:
 		{
 			name = "shield_2";
 			texture = "shield";
-			pos_x = 1000;
-			pos_y = 650;
+			pos_x = 300;
+			pos_y = 50;
 		}
 	  );
 
@@ -111,7 +111,7 @@ config:
 		{
 			name = "enemie_1";
 			texture = "enemie";
-			pos_x = 1000;
+			pos_x = 400;
 			pos_y = 300;
 		},
 		{
