@@ -3,6 +3,9 @@
 #
 
 
+2019-02-04 -> configs
+	      remove libxml stuff -> not needed
+
 2019-02-03 -> pixel-art:
 	      add first stuff for something like a level
 
